gobmkida/c1/induce_secondary_move_reasons
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/induce_secondary_move_reasons/src/engine/value_moves.c:1059:28: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v15 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v14); 
                           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/induce_secondary_move_reasons/src/obj/1/value_moves.o] Error 1
